2004-05-25  Ilja Booij  <ilja@ic-s.nl>

	* db.c (db_calculate_quotum_all): changed query. It should now
	work when there are no messages in a user's mailbox. 

2004-05-19  Ilja Booij  <ilja@ic-s.nl>

	* lmtp.c (lmtp): fixed use of list in loop. An element was sometimes
	removed, after which it was still used -> illegal read.

2004-05-14  Ilja Booij  <ilja@ic-s.nl>

	* pipe.c (store_message_in_blocks): new function that stores
	the body of a message in several blocks (if necessary).
	(store_message_temp): changed to get message from a string, 
	instead of from a stream.
	(insert_messages): changed to get message from a string instead
	of from a stream.

	* main.c (read_whole_message_pipe): new function to read a
	complete message from a pipe.
	(main): now uses read_whole_message_pipe to get message.

	* lmtp.c (read_whole_message_network): new function to read
	a complete message from a network connection.
	(lmtp): now uses read_whole_message_network() to get the
	message from the network.

	* header.c (split_message): new function for splitting a 
	message in header and body.
	(get_rfc_size): new function for getting the rfc size of
	a message body
	(consume_header_line): new function used to get header size
	and signal end of headers.

	* header.h: removed prototype for read_header()
	(split_message): added function used for splitting message

2004-05-11  Aaron Stone  <aaron@serendipity.cx>

	* imapcommands.c: removed carriage returns and newlines
	from calls to trace (with help of a patch by Thomas Mueller).

2004-05-11  Ilja Booij  <ilja@ic-s.nl>

	* sql/mysql/migrate_from_1.x_to_2.0_innodb.mysql: added BINARY to 
	mailboxes.name to be able to use it case sensitively.

	* sql/mysql/migrate_from_1.x_to_2.0.mysql: added BINARY to 
	mailboxes.name to be able to use it case sensitively.

	* sql/mysql/create_tables.mysql: added BINARY to mailboxes.name to
	be able to use it case-sensitively.

	* sql/mysql/create_tables_innoDB.mysql: added BINARY to mailboxes.name